contact form backend

--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,4 @@ MONGO_URI=mongodb+srv://womensafety:Saanya1234@cluster0.j5jmfir.mongodb.net/wome
 SECRET_KEY=womensafety_secret
 EMAIL_USER=saanyagarg400@gmail.com
 EMAIL_PASS=xuesuqamqypslnoa
-
-
+ADMIN_EMAIL=saanyagarg400@gmail.com
